--- a/tutor-search-roadmaps.html
+++ b/tutor-search-roadmaps.html
@@ -149,7 +149,7 @@
 
 				<!-- Main navigation -->
 				<ul class="navigation">
-					<li class=""><a href="tutor-search-roadmaps.html"><span>Search Roadmaps</span> <i class="icon-people"></i></a></li>
+					<li class="active"><a href="tutor-search-roadmaps.html"><span>Search Roadmaps</span> <i class="icon-people"></i></a></li>
 					<li class=""><a href="tutor-my-roadmaps.html"><span>My Roadmaps</span> <i class="icon-people"></i></a></li>
 					<li class=""><a href="tutor-my-trainings.html"><span>My Trainings</span> <i class="icon-people"></i></a></li>
 				</ul>
@@ -165,11 +165,72 @@
 
 <div class="page-header">
 	<div class="page-title">
-		<h3>Welcome tutor</h3>
+		&nbsp;
 	</div>
 </div>
 
 
+<form action="#" class="search-line block" role="form">
+				<span class="subtitle"><i class="icon-search3"></i> Search for Roadmaps</span>
+				<div class="input-group">
+					<div class="search-control">
+						<input type="text" class="form-control autocomplete ui-autocomplete-input" placeholder="What are you looking for?" autocomplete="off"><span role="status" aria-live="polite" class="ui-helper-hidden-accessible"></span>
+					</div>
+					<span class="input-group-btn">
+						<a href="tutor-search-roadmaps-results.html" class="btn btn-primary" >Search</a>
+					</span>
+				</div>
+			</form>
+
+
+
+<div class="col-md-6">
+
+	<div class="panel panel-default">
+  	<div class="panel-heading"><h6 class="panel-title">Most Popular</h6></div>
+  	<div class="panel-body">
+			<ul class="search-results">
+															<li>
+																<h6><a href="tutor-view-roadmap.html">java for noobs</a></h6>
+																<a href="#" class="result-url">by Chaim Turkel</a>
+																<p><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star2"></i></p>
+																<p>You will learn basic of java and be able to develop swing applications and also swift...</p>
+															</li>
+
+															<li>
+																<h6><a href="tutor-view-roadmap.html">java for android developers</a></h6>
+																<a href="#" class="result-url">by Yossi Elkrief</a>
+																<p><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star2"></i></p>
+																<p>You will learn java with a lot of android stuff as well</p>
+															</li>
+														</ul>
+		</div>
+  </div>
+
+
+</div>
+<div class="col-md-6">
+	<div class="panel panel-default">
+  	<div class="panel-heading"><h6 class="panel-title">Latest</h6></div>
+  	<div class="panel-body">
+			<ul class="search-results">
+				<li>
+					<h6><a href="tutor-view-roadmap.html">java for noobs</a></h6>
+					<a href="#" class="result-url">by Chaim Turkel</a>
+					<p><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star2"></i></p>
+					<p>You will learn basic of java and be able to develop swing applications and also swift...</p>
+				</li>
+
+				<li>
+					<h6><a href="tutor-view-roadmap.html">java for android developers</a></h6>
+					<a href="#" class="result-url">by Yossi Elkrief</a>
+					<p><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star2"></i></p>
+					<p>You will learn java with a lot of android stuff as well</p>
+				</li>
+														</ul>
+		</div>
+  </div>
+</div>
 
 <script>
 function unassign(taskID,developerID){
