--- a/tutor-view-roadmap.html
+++ b/tutor-view-roadmap.html
@@ -149,7 +149,7 @@
 
 				<!-- Main navigation -->
 				<ul class="navigation">
-					<li class=""><a href="tutor-search-roadmaps.html"><span>Search Roadmaps</span> <i class="icon-people"></i></a></li>
+					<li class="active"><a href="tutor-search-roadmaps.html"><span>Search Roadmaps</span> <i class="icon-people"></i></a></li>
 					<li class=""><a href="tutor-my-roadmaps.html"><span>My Roadmaps</span> <i class="icon-people"></i></a></li>
 					<li class=""><a href="tutor-my-trainings.html"><span>My Trainings</span> <i class="icon-people"></i></a></li>
 				</ul>
@@ -163,14 +163,31 @@
 		<!-- Page content -->
 	 	<div class="page-content">
 
-<div class="page-header">
-	<div class="page-title">
-		<h3>Welcome tutor</h3>
-	</div>
-</div>
+			<div class="page-header">
+							<div class="page-title">
+								<h3>Java for noobs <small>by Michael Hollander</small></h3>
+							</div>
 
 
+						</div>
 
+						<div class="row">
+							<div class="col-lg-8">
+								<div class="block">
+									<ul class="headline-info">
+							<li>Steps: 3</li>
+							<li># Graduates: 187</li>
+							<li># Current students: 16</li>
+							<li># tutos: 16</li>
+							<li>ratings: <i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star3"></i><i class="icon-star2"></i></li>
+						</ul>
+									<p>In this RoadMap you will learn a lot of java and become ready to work as a junior in any enterprise. This contains basic gui, server side, jdbc and lot of other stuff</p>
+
+									<button class="btn btn-primary">Start Tutoring this RoadMap</button>
+								</div>
+
+							</div>
+						</div>
 <script>
 function unassign(taskID,developerID){
 	if(confirm('Are you sure?')){
