--- a/tutor-roadmap-player.html
+++ b/tutor-roadmap-player.html
@@ -163,14 +163,83 @@
 		<!-- Page content -->
 	 	<div class="page-content">
 
-<div class="page-header">
-	<div class="page-title">
-		<h3>Welcome tutor</h3>
-	</div>
-</div>
+			<div class="page-header">
+							<div class="page-title">
+								<h3>Java for noobs <small>by Michael Hollander</small></h3>
+							</div>
 
 
+						</div>
 
+						<div class="block">
+							    		<ul class="statistics">
+							    			<li>
+							    				<div class="statistics-info">
+								    				<a href="#" title="" class="bg-success"><i class="icon-user-plus"></i></a>
+								    				<strong>3/5 Steps</strong>
+								    			</div>
+												<div class="progress progress-micro">
+													<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+														<span class="sr-only">60% Complete</span>
+													</div>
+												</div>
+												<span>RoadMap progress</span>
+							    			</li>
+							    		</ul>
+						    		</div>
+
+						<div class="row">
+							<div class="col-lg-2">
+								<div class="sidebar collapse" style="width:100%;">
+									<div class="sidebar-content">
+											<ul class="navigation">
+												<li>
+													<a href="#" class="expand level-open">Intro to java</a>
+													<ul style="display:block">
+														<li><a href="#"Some youtube video</a></li>
+														<li>Some blog post</li>
+														<li>an excercise</li>
+													</ul>
+												</li>
+												<li>
+													<a href="#" class="expand level-open">Swing</a>
+													<ul style="display:block">
+														<li>Some youtube video</li>
+														<li>Some blog post</li>
+														<li>an excercise</li>
+													</ul>
+												</li>
+												<li>
+													<a href="#" class="expand level-open">J2EE</a>
+													<ul style="display:block">
+														<li>Some youtube video</li>
+														<li>Some blog post</li>
+														<li>an excercise</li>
+													</ul>
+												</li>
+											</ul>
+										</div>
+									</div>
+							</div>
+							<div class="col-lg-8">
+								<div>
+									<iframe width="640" height="360" src="https://www.youtube.com/embed/Xm8Fe3dHmkE" frameborder="0" allowfullscreen></iframe>
+								</div>
+								<div>
+									<div class="well">
+		                        <ul class="pager">
+		                            <li class="previous"><a href="#">← Prev</a></li>
+		                            <li class="next"><a href="tutor-roadmap-player-pr.html">Next →</a></li>
+		                        </ul>
+		                    </div>
+								</div>
+							</div>
+							<div class="col-lg-2">
+								<img style="width:100%;" src="whatsappchat.png">
+							</div>
+						</div>
+					</div>
+				</div>
 <script>
 function unassign(taskID,developerID){
 	if(confirm('Are you sure?')){
