--- a/student-provide-feedback.html
+++ b/student-provide-feedback.html
@@ -176,86 +176,46 @@
 		<!-- Page content -->
 	 	<div class="page-content">
 
-			<div class="page-header">
-							<div class="page-title">
-								<h3>Java for noobs <small>by Michael Hollander</small></h3>
-							</div>
+<div class="page-header">
+	<div class="page-title">
+		&nbsp;
+	</div>
+</div>
 
 
-						</div>
+<form role="form" action="#">
+	            <div class="panel panel-default">
+	                <div class="panel-heading"><h6 class="panel-title"><i class="icon-page-break"></i> Provide feedback for <strong>Java for Noobs</strong></h6></div>
+	                <div class="panel-body">
 
-						<div class="block">
-							    		<ul class="statistics">
-							    			<li>
-							    				<div class="statistics-info">
-								    				<a href="#" title="" class="bg-success"><i class="icon-user-plus"></i></a>
-								    				<strong>3/5 Steps</strong>
-								    			</div>
-												<div class="progress progress-micro">
-													<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-														<span class="sr-only">60% Complete</span>
-													</div>
-												</div>
-												<span>RoadMap progress</span>
-							    			</li>
-							    		</ul>
-						    		</div>
+				        <div class="form-group">
+				            <label>Rate the RoadMap:</label>
+			            	<i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i>
+				        </div>
 
-						<div class="row">
-							<div class="col-lg-2">
-								<div class="sidebar collapse" style="width:100%;">
-									<div class="sidebar-content">
-											<ul class="navigation">
-												<li>
-													<a href="#" class="expand level-open">Intro to java</a>
-													<ul style="display:block">
-														<li><a href="#"Some youtube video</a></li>
-														<li>Some blog post</li>
-														<li>an excercise</li>
-													</ul>
-												</li>
-												<li>
-													<a href="#" class="expand level-open">Swing</a>
-													<ul style="display:block">
-														<li>Some youtube video</li>
-														<li>Some blog post</li>
-														<li>an excercise</li>
-													</ul>
-												</li>
-												<li>
-													<a href="#" class="expand level-open">J2EE</a>
-													<ul style="display:block">
-														<li>Some youtube video</li>
-														<li>Some blog post</li>
-														<li>an excercise</li>
-													</ul>
-												</li>
-											</ul>
-										</div>
-									</div>
-							</div>
-							<div class="col-lg-8">
-								<div>
-									<h4>Excercise time!</h4>
-									<p>Now you need to use all that you learn and build an app skeleton</p>
-									<p>This should contains all the infrastructure discussed and GUI components in swing.</p>
-									<p>Once you're code is commited and pushed, click the send PR button</p>
+								<div class="form-group">
+										<label>Feedback to Author:</label>
+										<textarea rows="5" cols="5" class="form-control"></textarea>
 								</div>
-								<div>
-									<div class="well">
-		                        <ul class="pager">
-		                            <li class="previous"><a href="student-roadmap-player.html">← Prev</a></li>
-		                            <li class="next"><a href="student-provide-feedback.html">Send PR →</a></li>
-		                        </ul>
-		                    </div>
+
+								<div class="form-group">
+				            <label>Rate your tutor Eli:</label>
+			            	<i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i><i class="icon-star"></i>
+				        </div>
+
+								<div class="form-group">
+										<label>Feedback to Eli:</label>
+										<textarea rows="5" cols="5" class="form-control"></textarea>
 								</div>
-							</div>
-							<div class="col-lg-2">
-								<img style="width:100%;" src="whatsappchat.png">
-							</div>
-						</div>
-					</div>
+
+
+                        <div class="form-actions text-right">
+                        	<input type="submit" value="Submit Feedback" class="btn btn-primary">
+                        </div>
+
+				    </div>
 				</div>
+			</form>
 <script>
 function unassign(taskID,developerID){
 	if(confirm('Are you sure?')){
