past roadmap for students

--- a/student-past-roadmaps.html
+++ b/student-past-roadmaps.html
@@ -165,7 +165,7 @@
 				<ul class="navigation">
 					<li class=""><a href="student-search-roadmaps.html"><span>Search Roadmaps</span> <i class="icon-people"></i></a></li>
 					<li class=""><a href="student-my-roadmaps.html"><span>My Roadmaps</span> <i class="icon-people"></i></a></li>
-					<li class=""><a href="student-past-roadmaps.html"><span>Past Roadmaps</span> <i class="icon-people"></i></a></li>
+					<li class="active"><a href="student-past-roadmaps.html"><span>Past Roadmaps</span> <i class="icon-people"></i></a></li>
 				</ul>
 				<!-- /main navigation -->
 
@@ -179,11 +179,47 @@
 
 <div class="page-header">
 	<div class="page-title">
-		<h3>Welcome student</h3>
+		&nbsp;
 	</div>
 </div>
 
 
+
+<div class="panel panel-default">
+	<div class="panel-heading"><h6 class="panel-title"><i class="icon-table"></i> Past Roadmaps</h6></div>
+	<div class="datatable">
+		<table class="table">
+			<thead>
+				<th>title</th>
+				<th>version</th>
+				<th>tutor</th>
+				<th>started at</th>
+				<th>finished at</th>
+			</thead>
+
+			<tbody>
+				<tr>
+					<td><a href="student-roadmap-player.html">java for noobs</a></td>
+					<td>1.0</td>
+					<td>Shlomi</td>
+					<td>2016-01-01</td>
+					<td>2016-01-21</td>
+				</tr>
+				<tr>
+					<td><a href="student-roadmap-player.html">mongo for noobs</a></td>
+					<td>1.1</td>
+					<td>Yafit</td>
+					<td>2016-06-12</td>
+					<td>2016-07-03</td>
+				</tr>
+			</tbody>
+
+		</table>
+
+
+
+	</div>
+</div>
 
 <script>
 function unassign(taskID,developerID){
