--- a/student-view-roadmap.html
+++ b/student-view-roadmap.html
@@ -165,6 +165,7 @@
 				<ul class="navigation">
 					<li class="active"><a href="student-search-roadmaps.html"><span>Search Roadmaps</span> <i class="icon-people"></i></a></li>
 					<li class=""><a href="student-my-roadmaps.html"><span>My Roadmaps</span> <i class="icon-people"></i></a></li>
+					<li class=""><a href="student-past-roadmaps.html"><span>Past Roadmaps</span> <i class="icon-people"></i></a></li>
 				</ul>
 				<!-- /main navigation -->
 
