--- a/tutor-my-trainings.html
+++ b/tutor-my-trainings.html
@@ -177,18 +177,18 @@
 		<table class="table">
 			<thead>
 				<th>title</th>
-				<th>student/th>
+				<th>student</th>
 				<th>progress</th>
 			</thead>
 
 			<tbody>
 				<tr>
-					<td><a href="tutor-view-my-roadmap.html">java for noobs</a></td>
+					<td><a href="tutor-roadmap-player.html">java for noobs</a></td>
 					<td>Naftali</td>
 					<td>3/5</td>
 				</tr>
 				<tr>
-					<td><a href="tutor-view-my-roadmap.html">mongo for noobs</a></td>
+					<td><a href="tutor-roadmap-player.html">mongo for noobs</a></td>
 					<td>Ayelet</td>
 					<td>2/6</td>
 				</tr>
