--- a/student-past-roadmaps.html
+++ b/student-past-roadmaps.html
@@ -199,14 +199,14 @@
 
 			<tbody>
 				<tr>
-					<td><a href="student-roadmap-player.html">java for noobs</a></td>
+					<td><a href="#">java for noobs</a></td>
 					<td>1.0</td>
 					<td>Shlomi</td>
 					<td>2016-01-01</td>
 					<td>2016-01-21</td>
 				</tr>
 				<tr>
-					<td><a href="student-roadmap-player.html">mongo for noobs</a></td>
+					<td><a href="#">mongo for noobs</a></td>
 					<td>1.1</td>
 					<td>Yafit</td>
 					<td>2016-06-12</td>
