--- a/tutor-my-trainings.html
+++ b/tutor-my-trainings.html
@@ -172,24 +172,24 @@
 
 
 <div class="panel panel-default">
-	<div class="panel-heading"><h6 class="panel-title"><i class="icon-table"></i> My Roadmaps</h6></div>
+	<div class="panel-heading"><h6 class="panel-title"><i class="icon-table"></i> My Trainings</h6></div>
 	<div class="datatable">
 		<table class="table">
 			<thead>
-				<th>title</th>
 				<th>student</th>
+				<th>roadmap</th>
 				<th>progress</th>
 			</thead>
 
 			<tbody>
 				<tr>
-					<td><a href="tutor-roadmap-player.html">java for noobs</a></td>
-					<td>Naftali</td>
+					<td><a href="tutor-roadmap-player.html">Naftali</a></td>
+					<td><a href="tutor-view-my-roadmap.html">java for noobs</a></td>
 					<td>3/5</td>
 				</tr>
 				<tr>
-					<td><a href="tutor-roadmap-player.html">mongo for noobs</a></td>
-					<td>Ayelet</td>
+					<td><a href="tutor-roadmap-player.html">Ayelet</a></td>
+					<td><a href="tutor-view-my-roadmap.html">mongo for noobs</a></td>
 					<td>2/6</td>
 				</tr>
 			</tbody>
